# pratts

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: build-publish-sign-release.yml  lint-test-cover-docs.yml
docs/: conf.py  toc.rst
docs/_source/: pratts.rst
src/pratts/: __init__.py  pratts.py
